some payment updates

--- a/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
+++ b/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
@@ -16,7 +16,7 @@ In diesem Menü nimmst du Einstellungen für die automatische Zuordnung von Zahl
 Grundeinstellungen ändern:
 
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Eingänge*.
-. Nimm die Einstellungen gemäß der Erläuterungen in <<tabelle-grundeinstellungen-zahlungseingang>> vor.
+. Nimm die Einstellungen gemäß der Erläuterungen in <<#tabelle-grundeinstellungen-zahlungseingang>> vor.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [[tabelle-grundeinstellungen-zahlungseingang]]
@@ -62,7 +62,7 @@ In der Übersicht werden dir Zahlungen in deiner gewählten xref:payment:waehrun
 [TIP]
 .Ereignisaktionen für Zahlungseingänge einrichten
 ====
-Der Zahlungseingang als Ereignis spielt in der Auftragsbearbeitung eine wichtige Rolle, da der Versand häufig erst nach Zahlungseingang erfolgt. In plentymarkets wechselt der Status der meisten Aufträge mit dem Eintreffen der Zahlung von *Status [3] - Warten auf Zahlung* in *Status [5] - Freigabe Versand*. Richte xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] ein, um die Auftragsbearbeitung zu automatisieren und den Versand nach Zahlungseingang auszulösen.
+Der Zahlungseingang als Ereignis spielt in der Auftragsbearbeitung eine wichtige Rolle, weil der Versand häufig erst nach Zahlungseingang erfolgt. In plentymarkets wechselt der Status der meisten Aufträge mit dem Eintreffen der Zahlung von *Status [3] - Warten auf Zahlung* in *Status [5] - Freigabe Versand*. Richte xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] ein, um die Auftragsbearbeitung zu automatisieren und den Versand nach Zahlungseingang auszulösen.
 ====
 
 [#bankbuchungsimport]
@@ -98,27 +98,27 @@ Zahlungen suchst du in der Übersichtsansicht im Menü *Aufträge » Zahlungsver
 [.instruction]
 Tabelle individualisieren:
 
-. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]). +
+. Klicke auf *Spalten konfigurieren* (icon:settings[set=material, role=darkGrey]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
 . Wähle aus, welche Spalten angezeigt werden sollen.
-. Verschiebe (icon:sort[set=material]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
+. Verschiebe (icon:drag_indicator[set=material, role=darkGrey]) die Spalten so, dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 Für die Suche kannst du verschiedene Filter setzen und sie kombinieren, um beispielsweise nach unzugeordneten Zahlungen der letzten Woche zu suchen.
 
-Du hast mehrere Möglichkeiten, die Suche zu nutzen. Du kannst einen Wert im Suchfeld eingeben und dann den entsprechenden Filter auswählen. Bei Eingabe einer Zahl oder eines Buchstaben werden dir mögliche Filter vorgeschlagen, z.B. Auftrags-IDs oder Variantennummer. Gib den Wert vollständig ein und wähle den passenden Filter aus den Vorschlägen. Wiederhole dies, um Filter miteinander zu kombinieren. Klicke auf *Suchen* (icon:search[set=material]), um die Suche auszuführen. +
-Möchtest du erst einen Filter aus der Filterliste wählen, klicke auf *Filter* (icon:tune[set=material]). Die verfügbaren Filter werden dir angezeigt. Gib einen Wert im gewünschten Filter ein. Hast du alle benötigten Filter gesetzt, klicke auf *Suchen*. +
-Möchtest du einen gesetzten Filter löschen, entferne den Chip. In <<tabelle-zahlungen-suchen>> werden die verfügbaren Filter erläutert.
+Du hast mehrere Möglichkeiten, die Suche zu nutzen. Du kannst einen Wert im Suchfeld eingeben und dann den entsprechenden Filter auswählen. Bei Eingabe einer Zahl oder eines Buchstaben werden dir mögliche Filter vorgeschlagen, z.B. Auftrags-IDs oder Variantennummer. Gib den Wert vollständig ein und wähle den passenden Filter aus den Vorschlägen. Wiederhole dies, um Filter miteinander zu kombinieren. Klicke auf *Suchen* (icon:search[set=material, role=darkGrey]), um die Suche auszuführen. +
+Möchtest du erst einen Filter aus der Filterliste wählen, klicke auf *Filter* (icon:tune[set=material, role=dakrGrey]). Die verfügbaren Filter werden dir angezeigt. Gib einen Wert im gewünschten Filter ein. Hast du alle benötigten Filter gesetzt, klicke auf *Suchen*. +
+Möchtest du einen gesetzten Filter löschen, entferne den Chip. In <<#tabelle-zahlungen-suchen>> werden die verfügbaren Filter erläutert.
 
-Zudem kannst du mit der Komponente *Gespeicherte Filter* (icon:bookmarks[set=material]) ausgewählte Filter in der UI speichern. Gespeicherte Filtersets sind dann in dieser Komponente bei jedem Öffnen des Menüs auswählbar, ähnlich wie Lesezeichen. Jede:r Benutzer:in kann eigene Filter festlegen.
+Zudem kannst du mit der Komponente *Gespeicherte Filter* (icon:bookmarks[set=material, role=darkGrey]) ausgewählte Filter in der UI speichern. Gespeicherte Filtersets sind dann in dieser Komponente bei jedem Öffnen des Menüs auswählbar, ähnlich wie Lesezeichen. Jede:r Benutzer:in kann eigene Filter festlegen.
 
 [.instruction]
 Filter speichern:
 
 . Setze die gewünschten Filter mit den entsprechenden Werten.
 . Führe die Suche aus.
-. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material]).
-. Klicke auf *Aktuellen Filter speichern* (icon:bookmark_border[set=material]). +
+. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material, role=darkGrey]).
+. Klicke auf *Aktuellen Filter speichern* (icon:bookmark_border[set=material, role=darkGrey]). +
 → Das Fenster *Filter speichern* öffnet sich.
 . Vergib einen *Filternamen*.
 . Entscheide, ob das Filterset als Standard-Filterset genutzt werden soll.
@@ -195,7 +195,7 @@ Filter speichern:
 [#payments-myview]
 == MyView nutzen
 
-Die Benutzeroberfläche der Detailansichten von Zahlungen sowie der Ansicht zum Teilen einer Zahlung werden dir als MyView zur Verfügung gestellt. Das bedeutet, dass Benutzer:innen sich jeweils eine eigene Ansicht mit den zur Verfügung stehenden Elementen erstellen können. Dadurch kann jede:r selbst bestimmen, welche Informationen an welcher Stelle benötigt werden. Durch diese Individualisierung wird das Arbeiten nicht nur komfortabler, sondern auch beschleunigt. In diesem Kapitel wird erklärt, wie man mit MyView umgeht und sich eine eigene Ansicht anlegt. Die Bearbeitung von Zahlungen, z.B. das xref:payment:beta-zahlungen-verwalten.adoc#30[Zuordnen], das xref:payment:beta-zahlungen-verwalten.adoc#40[Lösen] oder auch das xref:payment:beta-zahlungen-verwalten.adoc#50[Teilen] von Zahlungen, wird in den nachfolgenden Kapiteln erklärt.
+Die Bedienoberfläche der Detailansichten von Zahlungen sowie der Ansicht zum Teilen einer Zahlung werden dir als MyView zur Verfügung gestellt. Das bedeutet, dass Benutzer:innen sich jeweils eine eigene Ansicht mit den zur Verfügung stehenden Elementen erstellen können. Dadurch kann jede:r selbst bestimmen, welche Informationen an welcher Stelle benötigt werden. Durch diese Individualisierung wird das Arbeiten nicht nur komfortabler, sondern auch beschleunigt. In diesem Kapitel wird erklärt, wie man mit MyView umgeht und sich eine eigene Ansicht anlegt. Die Bearbeitung von Zahlungen, z.B. das xref:payment:beta-zahlungen-verwalten.adoc#30[Zuordnen], das xref:payment:beta-zahlungen-verwalten.adoc#40[Lösen] oder auch das xref:payment:beta-zahlungen-verwalten.adoc#50[Teilen] von Zahlungen, wird in den nachfolgenden Kapiteln erklärt.
 
 Zur Detailansicht einer Zahlung kommst du von der Übersichtstabelle aller Zahlungen im Menü *Aufträge » Zahlungsverkehr* aus. Klicke in die entsprechende Zeile oder auf die Zahlungs-ID und die Detailansicht der ausgewählten Zahlung öffnet sich. +
 Zur Ansicht zum Teilen von Zahlungen kommst du, indem du in der Übersichtstabelle in der Zeile der Zahlung auf *Zahlung teilen* (icon:call_split[set=material]) klickst. +
@@ -205,7 +205,7 @@ Wenn du in diesen Bereichen noch keine eigene Ansicht erstellt hast, wird dir hi
 === Neue Ansicht erstellen
 
 . Klicke auf die Liste der Ansichten (icon:caret-down[role="darkGrey"]).
-. Klicke auf icon:plus[role="darkGrey"] *Neue Ansicht erstellen ...*.
+. Klicke auf icon:add[set=material, role=darkGrey] *Neue Ansicht erstellen ...*.
 . Gib einen Namen ein.
 . Klicke auf *Ansicht erstellen*. +
 → Die neue Ansicht wird erstellt und automatisch geöffnet, d.h. sie wird angewendet.
@@ -216,8 +216,8 @@ Es ist jetzt möglich, zwischen den Ansichten zu wechseln.
 
 . Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]).
 . Füge Zeilen und Spalten hinzu, um ein Raster zu erstellen.
-.. Klicke auf icon:ellipsis-v[role="blue"] und dann auf icon:plus[role="darkGrey"] *Zeile hinzufügen*.
-.. Klicke auf *Spalte hinzufügen* (icon:plus[role="darkGrey"]).
+.. Klicke auf icon:ellipsis-v[role="blue"] und dann auf icon:add[set=material, role=darkGrey] *Zeile hinzufügen*.
+.. Klicke auf icon:add[set=material, role=darkGrey] *Spalte hinzufügen*.
 .. Ziehe die Spalten, um sie größer oder kleiner zu machen.
 
 [#place-elements]
@@ -256,8 +256,8 @@ Die Zahl im grauen Kreis gibt an, wie oft du das Element verwenden kannst. Die m
 . Speichere die Ansicht (icon:save[set=plenty, role="darkGrey"]) und schließe den Bearbeitungsmodus (icon:close[role="darkGrey"]).
 . Prüfe das Ergebnis im Hauptfenster.
 . Falls erforderlich:
-.. Klicke nochmal auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]) und passe die Ansicht weiter an.
-.. Erlaube anderen Benutzern, die Ansicht zu sehen.
+.. Klicke erneut auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]) und passe die Ansicht weiter an.
+.. Erlaube anderen Benutzer:innen, die Ansicht zu sehen.
 
 [#editing-functions]
 ==== Funktionen im Bearbeitungsmodus
@@ -309,7 +309,7 @@ Benutzer::
 . Erweitere die Listeneinträge (icon:chevron-right[role="darkGrey"]) und wähle die Ansichten (icon:check-square[role="blue"]), auf die der Benutzer Zugriff haben soll.
 . Speichere (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
-xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#112[Weitere Informationen] zu Benutzerkonten und Zugriffsrechten.
+Weitere Informationen zu Benutzer:innenkonten und Zugriffsrechten findest du xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#112[hier].
 
 --
 Rollen::
@@ -325,7 +325,7 @@ Rollen::
 . Erweitere die Listeneinträge (icon:chevron-right[role="darkGrey"]) und wähle die Ansichten (icon:check-square[role="blue"]), auf die die Benutzerrolle Zugriff haben soll.
 . Speichere (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
-xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#116[Weitere Informationen] zu Benutzerkonten und Zugriffsrechten.
+Weitere Informationen zu Benutzer:innenkonten und Zugriffsrechten findest du xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#112[hier].
 
 --
 ====
@@ -342,7 +342,7 @@ Gehe wie im Folgenden beschrieben vor, um eine Zahlung in der Übersichtstabelle
 Zahlung direkt anhand der Auftrags-ID in der Übersichtstabelle zuordnen:
 
 . Öffne das Menü *Aufträge » Zahlungsverkehr*.
-. xref:payment:beta-zahlungen-verwalten.adoc#20[Suche] (icon:search[set=material]) die gewünschte Zahlung.
+. Suche (icon:search[set=material]) die gewünschte Zahlung wie im Kapitel xref:payment:beta-zahlungen-verwalten-neu.adoc#20[Zahlungen suchen] beschrieben.
 . Gib in der Zeile der unzugeordneten Zahlung im Feld *Auftrags-ID* direkt die entsprechende ID des Auftrages, dem die Zahlung zugeordnet werden soll, ein.
 . Drücke die *Entertaste* zum Speichern. +
 → Die Zahlung ist zugeordnet und die Übersicht wird aktualisiert.
@@ -354,7 +354,7 @@ Um eine Zahlung aus der Detailansicht heraus zuzuordnen, gehe wie im Folgenden b
 Zahlung in Detailansicht zuordnen:
 
 . Öffne das Menü *Aufträge » Zahlungsverkehr*.
-. xref:payment:beta-zahlungen-verwalten.adoc#20[Suche] (icon:search[set=material]) die gewünschte Zahlung.
+. Suche (icon:search[set=material]) die gewünschte Zahlung wie im Kapitel xref:payment:beta-zahlungen-verwalten-neu.adoc#20[Zahlungen suchen] beschrieben.
 . Öffne die Zahlung, indem du entweder in der Zeile der unzugeordneten Zahlung, die du zuordnen möchtest, auf die Payment-ID oder auf auf *Zahlung zuordnen* (icon:credit_card[set=material]) klickst. +
 → Du wirst weitergeleitet zum Bereich *Zuordnung* dieser Zahlung. +
 → Die Aufträge mit der höchsten Übereinstimmung werden dort angezeigt.
@@ -364,7 +364,7 @@ Zahlung in Detailansicht zuordnen:
 Die Übereinstimmungen zwischen Zahlungen und Aufträgen werden anhand einer Matrix im Hintergrund überprüft. Diese Überprüfung wird ausgelöst, sobald du die Tabelle *Zuordnung* in der Detailansicht einer Zahlung öffnest. Dann werden dir absteigend maximal die 10 Aufträge mit den höchsten Übereinstimmungsraten angezeigt. +
 Sobald du eine Zahlung zugeordnet hast, wird in dieser Tabelle nur noch diese Zuordnung angezeigt. Nur wenn die Zahlung vom Auftrag xref:payment:beta-zahlungen-verwalten.adoc#40[gelöst] wird, werden hier wieder die höchsten Übereinstimmungen angezeigt.
 
-Für den Fall, dass in der Zuordnungstabelle keine Übereinstimmungen angezeigt werden, hast du weitere Möglichkeiten. Du kannst über das Kontextmenü (icon:more_vert[set=material]) folgende Optionen auswählen:
+Für den Fall, dass in der Zuordnungstabelle keine Übereinstimmungen angezeigt werden, hast du weitere Möglichkeiten. Du kannst über das Kontextmenü (icon:more_vert[set=material, role=darkGrey]) folgende Optionen auswählen:
 
 * *Auftrags-ID zuordnen*: Bei Auswahl öffnet sich ein Bearbeitungsfenster. Hier kannst du direkt die Auftrags-ID des Auftrags, dem die Zahlung zugeordnet werden soll, eingeben. Durch klicken auf *Zuordnen* wird die Zahlung dem eingegebenen Auftrag zugeordnet.
 * *Suche Aufträge*: Bei Auswahl wirst du zur Auftragssuche weitergeleitet. In der Auftragssuche sind die Filter *Kundenname*, *Betrag* sowie *Unbezahlt und Teilzahlung* vorausgewählt. So werden dir gleich möglich passende Aufträge angezeigt. Du kannst die Auftragssuche aber auch anpassen, um den richtigen Auftrag zu finden. Danach kannst du die Auftrags-ID in der Zuordnungstabelle eingeben und so die Zahlung zuordnen.
@@ -393,11 +393,11 @@ Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die 
 [.instruction]
 Tabelle individualisieren:
 
-. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]). +
+. Klicke auf *Spalten konfigurieren* (icon:settings[set=material, role=darkGrey]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
 . Wähle aus, welche Spalten angezeigt werden sollen.
-. Verschiebe (icon:sort[set=material]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
-. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
+. Verschiebe (icon:drag_indicator[set=material, role=darkGrey]) die Spalten so, dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
+. Klicke auf *Bestätigen*, um deine Auswahl zu speichern. +
 → Deine Auswahl ist gespeichert und wird angewendet.
 
 --
@@ -416,7 +416,7 @@ Zahlung buchen:
 . Wechsle in das Tab *Zahlung*.
 . Klicke auf *Zahlung buchen*. +
 → Das Fenster *Zahlung buchen* wird geöffnet.
-. Nimm die Einstellungen gemäß der Erläuterungen in <<tabelle-zahlungen-manuell-buchen>> vor.
+. Nimm die Einstellungen gemäß der Erläuterungen in <<#tabelle-zahlungen-manuell-buchen>> vor.
 . Klicke auf *Zahlung buchen*. +
 → Die Zahlung wird gebucht und in der Zahlungsübersicht angezeigt.
 
@@ -438,7 +438,7 @@ Zahlung buchen:
 | *Wechselkurs*
 |Bei Bedarf einen von der aktuellen System-Wechselkurs-Konfiguration abweichenden Wechselkurs eingeben. +
 *_Wichtig_*: Wenn die Zahlung in einer anderen Währung als der für die Zahlung eingestellten Währung (Standard-Währung) gebucht werden soll, z.B. in US-Dollar, unter *Währung* die Option *USD* wählen und unter *Betrag* den erhaltenen Betrag eingeben. +
-Wenn der xref:payment:waehrungen.adoc#20[Wechselkurs] im Menü *Einrichtung » Aufträge » Zahlung » Währungen* ermittelt wurde und verwendet werden soll, gib für *Wechselkurs* nichts ein, da dieser Kurs automatisch angewendet wird. Die Option *Wechselkurs* wird nur benötigt, wenn ein anderer Wechselkurs für diese Zahlung angewendet werden soll, z.B. der Kurs zum Zeitpunkt des Zahlungseingangs. In diesem Fall den zu diesem Zeitpunkt zutreffenden Wechselkurs eingeben.
+Wenn der xref:payment:waehrungen.adoc#20[Wechselkurs] im Menü *Einrichtung » Aufträge » Zahlung » Währungen* ermittelt wurde und verwendet werden soll, gib für *Wechselkurs* nichts ein, weil dieser Kurs automatisch angewendet wird. Die Option *Wechselkurs* wird nur benötigt, wenn ein anderer Wechselkurs für diese Zahlung angewendet werden soll, z.B. der Kurs zum Zeitpunkt des Zahlungseingangs. In diesem Fall den zu diesem Zeitpunkt zutreffenden Wechselkurs eingeben.
 
 | *Verwendungszweck*
 |Hier ist die Auftrags-ID voreingetragen, dieser Eintrag kann angepasst werden.
@@ -447,7 +447,7 @@ Wenn der xref:payment:waehrungen.adoc#20[Wechselkurs] im Menü *Einrichtung » A
 |Datum des Zahlungseingangs wählen. Standardmäßig ist das aktuelle Datum voreingestellt.
 |====
 
-Manuell gebuchte Zahlungseingänge erkennst du an dem Symbol *Manuelle Buchung*.
+Manuell gebuchte Zahlungseingänge erkennst du an dem Symbol icon:extension[set=material, role=darkGrey] *Manuelle Buchung*.
 
 [#40]
 == Zahlungen lösen
@@ -460,7 +460,7 @@ Zahlung in der Übersicht lösen:
 
 . Öffne das Menü *Aufträge » Zahlungsverkehr*.
 . xref:payment:beta-zahlungen-verwalten.adoc#20[Suche] (icon:search[set=material]) die gewünschte Zahlung.
-. Klicke in der Zeile der Zahlung, für die du die Zuordnung lösen möchtest, auf *Zahlung lösen* (icon:money_off[set=material]). +
+. Klicke in der Zeile der Zahlung, für die du die Zuordnung lösen möchtest, auf *Zahlung lösen* (icon:money_off[set=material, role=darkGrey]). +
 → Die Zahlung wird vom Auftrag gelöst und wird wieder als unzugeordnete Zahlung angezeigt.
 
 Eine Zahlung lässt sich auch in der Detailansicht lösen. Gehe dafür wie im Folgenden beschrieben vor:
@@ -469,18 +469,18 @@ Eine Zahlung lässt sich auch in der Detailansicht lösen. Gehe dafür wie im Fo
 Zahlung in Detailansicht lösen:
 
 . Öffne das Menü *Aufträge » Zahlungsverkehr*.
-. xref:payment:beta-zahlungen-verwalten.adoc#20[Suche] (icon:search[set=material]) die gewünschte Zahlung.
+. Suche (icon:search[set=material]) die gewünschte Zahlung wie im Kapitel xref:payment:beta-zahlungen-verwalten-neu.adoc#20[Zahlungen suchen] beschrieben.
 . Klicke in die Zeile der Zahlung, für die du die Zuordnung lösen möchtest. +
 → Du wirst weitergeleitet zur Detailansicht dieser Zahlung.
 . Öffne die Tabelle *Zuordnung*. +
 → Wenn sich die Tabelle öffnet wird die bestehende Auftragszuordnung wird angezeigt.
-. Klicke auf *Zahlung lösen* (icon:money_off[set=material]). +
+. Klicke auf *Zahlung lösen* (icon:money_off[set=material, role=darkGrey]). +
 → Die Zahlung wird vom Auftrag gelöst. Es werden wieder die höchsten Übereinstimmungen für diese Zahlung angezeigt.
 
 [IMPORTANT]
 .Beachten beim Lösen von Zahlungen
 ====
-Das Lösen von Zahlungen von einem Auftrag ist technisch zu jedem Zeitpunkt möglich, auch wenn die Auftragsbearbeitung schon fortgeschritten oder sogar abgeschlossen ist. Das Lösen von Zahlungen sollte aber nur möglichst gezielt geschehen, da durch wiederholtes Zuordnen und Lösen Fehler entstehen können, z.B., dass der Auftrag nicht mehr vollständig durch die Zahlung gedeckt wird. Beachte zudem, dass das Lösen einer Zahlung auch Änderungen an dem Auftrag, von dem die Zahlung gelöst wurde, bewirkt, wie z.B. eine Neuberechnung der Zahlung im Auftrag oder einen Statuswechsel.
+Das Lösen von Zahlungen von einem Auftrag ist technisch zu jedem Zeitpunkt möglich, auch wenn die Auftragsbearbeitung schon fortgeschritten oder sogar abgeschlossen ist. Das Lösen von Zahlungen sollte aber nur möglichst gezielt geschehen, weil durch wiederholtes Zuordnen und Lösen Fehler entstehen können, z.B., dass der Auftrag nicht mehr vollständig durch die Zahlung gedeckt wird. Beachte zudem, dass das Lösen einer Zahlung auch Änderungen an dem Auftrag, von dem die Zahlung gelöst wurde, bewirkt, wie z.B. eine Neuberechnung der Zahlung im Auftrag oder einen Statuswechsel.
 ====
 
 [#50]
@@ -492,7 +492,7 @@ Manuell gebuchte Zahlungseingänge, importierte Bankbuchungen sowie EBICS-Zahlun
 Zahlung aufteilen:
 
 . Öffne das Menü *Aufträge » Zahlungsverkehr*.
-. xref:payment:beta-zahlungen-verwalten.adoc#20[Suche] (icon:search[set=material]) die gewünschte Zahlung.
+. Suche (icon:search[set=material]) die gewünschte Zahlung wie im Kapitel xref:payment:beta-zahlungen-verwalten-neu.adoc#20[Zahlungen suchen] beschrieben.
 . Klicke in der Zeile der gewünschten Zahlung auf *Zahlung aufteilen* (icon:call_split[set=material]). +
 → Du wirst weitergeleitet zu einer eigenen Ansicht, in der du das Teilen vornimmst.
 . Suche (icon:search[set=material]) anhand der Filter *Auftrags-ID*, *Rechnungsnummer*, *Externe Auftrags-ID*, *Kunden-ID* und *Name* nach den entsprechenden Aufträgen. Du kannst mehrere IDs/Nummern eingeben, indem du sie durch ein Komma separierst.
@@ -502,12 +502,12 @@ Zahlung aufteilen:
 
 Beim Aufteilen einer Zahlung wird der Betrag dieser Zahlung immer um den jeweiligen Zahlungsbetrag der Aufträge, die beim Aufteilen ausgewählt werden, reduziert. Sowohl der ursprüngliche Gesamtbetrag der Zahlung als auch der Restbetrag werden dir in dieser Ansicht angezeigt. Wenn ein Restbetrag entsteht, kann dieser bei Bedarf erneut aufgeteilt werden.
 
-_Als Beispiel_: Stell dir vor, du willst eine Zahlung mit dem Betrag von 120 Euro aufteilen auf Auftrag A, mit einem offenen Rechnungsbetrag von 80 Euro, und Auftrag B, mit einem offenen Rechnungsbetrag von 20 Euro. Durch das Aufteilen und die Auswahl von genau diesen Aufträgen werden Auftrag A = 80 Euro und Auftrag B = 20 Euro zugewiesen. Die durch das Teilen entstehenden Zahlungen sind durch deine Auswahl diesen Aufträgen zugeordnet worden. Es bleibt ein Restbetrag von 20 Euro als nicht zugeordneter Eintrag übrig. Diesen Restbetrag kannst du einem anderen Auftrag zuordnen oder bei Bedarf ebenfalls aufteilen.
+*_Als Beispiel:_* Stell dir vor, du möchtest eine Zahlung mit dem Betrag von 120 Euro aufteilen auf Auftrag A, mit einem offenen Rechnungsbetrag von 80 Euro, und Auftrag B, mit einem offenen Rechnungsbetrag von 20 Euro. Durch das Aufteilen und die Auswahl von genau diesen Aufträgen werden Auftrag A = 80 Euro und Auftrag B = 20 Euro zugewiesen. Die durch das Teilen entstehenden Zahlungen sind durch deine Auswahl diesen Aufträgen zugeordnet worden. Es bleibt ein Restbetrag von 20 Euro als nicht zugeordneter Eintrag übrig. Diesen Restbetrag kannst du einem anderen Auftrag zuordnen oder bei Bedarf ebenfalls aufteilen.
 
 [IMPORTANT]
 .Aufteilen einer Zahlung rückgängig machen ist nicht möglich
 ====
-Das Aufteilen einer Zahlung kann nicht rückgängig gemacht werden. Um den ursprünglichen Zahlungseingang wiederherzustellen, lösche alle Teilzahlungen. Wird eine Teilzahlung gelöscht, wird der Betrag wieder zur ursprünglichen Zahlung hinzugerechnet. Vor dem Löschen müssen die Teilzahlungen vom Auftrag gelöst werden, da nur nicht zugeordnete Zahlungen gelöscht werden können.
+Das Aufteilen einer Zahlung kann _nicht_ rückgängig gemacht werden. Um den ursprünglichen Zahlungseingang wiederherzustellen, lösche alle Teilzahlungen. Wird eine Teilzahlung gelöscht, wird der Betrag wieder zur ursprünglichen Zahlung hinzugerechnet. Vor dem Löschen müssen die Teilzahlungen vom Auftrag gelöst werden, weil nur nicht zugeordnete Zahlungen gelöscht werden können.
 ====
 
 In der Ansicht zum Teilen einer Zahlung geben dir folgende Infoboxen einen schnellen Überblick über die wichtigsten Informationen:
@@ -530,7 +530,7 @@ Die Suchtabelle ist konfigurierbar. Standardmäßig werden dir alle zur Verfügu
 * Auftragsdatum
 * Offener Betrag
 
-Mit der Funktion *Spalten konfigurieren* (icon:settings[set=material]) kannst du selbst bestimmen, welche Spalten dir in welcher Reihenfolge angezeigt werden. +
+Mit der Funktion *Spalten konfigurieren* (icon:settings[set=material, role=darkGrey]) kannst du selbst bestimmen, welche Spalten dir in welcher Reihenfolge angezeigt werden. +
 Optional kannst du über *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]) außerdem in den *Einstellungen* des Portlets *Suche* festlegen, ob es beim Öffnen der Ansicht Zahlung teilen standardmäßig aus- oder eingeklappt sein soll. Nutze dafür die Option *Portlet eingeklappt*. +
 Möchtest du den Namen des Portlets ändern, dann gib im Feld *Titel* den gewünschten Namen ein.
 
@@ -543,7 +543,7 @@ Du kannst eine Zahlung nur löschen, wenn sie keinem Auftrag zugeordnet ist und 
 Zahlung aus der Übersicht löschen:
 
 . Öffne das Menü *Aufträge » Zahlungsverkehr*.
-. Klicke in der Zeile einer Zahlung auf *Zahlung löschen* (icon:delete[set=material]). +
+. Klicke in der Zeile einer Zahlung auf *Zahlung löschen* (icon:delete[set=material, role=darkGrey]). +
 → Die Abfrage *Zahlung löschen* wird geöffnet.
 . Klicke in der Abfrage auf *Ja*. +
 → Die Zahlung wird gelöscht und die Übersicht aktualisiert.
@@ -556,7 +556,7 @@ Zahlung aus der Detailansicht heraus löschen:
 . Öffne das Menü *Aufträge » Zahlungsverkehr*.
 . Klicke in die Zeile der Zahlung, die gelöscht werden soll, um sie zu öffnen. +
 → Du wirst weitergeleitet zur Detailansicht dieser Zahlung.
-. Klicke über den Zahlungsdetails auf *Zahlung löschen* (icon:delete[set=material]). +
+. Klicke über den Zahlungsdetails auf *Zahlung löschen* (icon:delete[set=material, role=darkGrey]). +
 → Die Abfrage *Zahlung löschen* wird geöffnet.
 . Klicke in der Abfrage auf *Ja*. +
 → Die Zahlung wird gelöscht und du wirst zur aktualisierten Übersicht zurückgeleitet.
@@ -564,7 +564,7 @@ Zahlung aus der Detailansicht heraus löschen:
 [.collapseBox]
 .*Was mache ich, wenn ich eine Zahlung löschen möchte, das Löschen aber deaktiviert ist?*
 --
-Zahlungen können nur gelöscht werden, wenn sie keinem Auftrag zugeordnet sind und keine untergeordneten Zahlungen existieren, die aus dem Teilen einer Zahlung entstanden sind. Trifft etwas davon zu, ist die Funktion *Zahlung löschen* (icon:delete[set=material]) nicht verfügbar. Möchtest du die Zahlung dennoch löschen, musst du dafür sorgen, dass sie weder zugeordnet ist, noch zugehörige Teilzahlungen existieren. Gehe dafür folgendermaßen vor:
+Zahlungen können nur gelöscht werden, wenn sie keinem Auftrag zugeordnet sind und keine untergeordneten Zahlungen existieren, die aus dem Teilen einer Zahlung entstanden sind. Trifft etwas davon zu, ist die Funktion *Zahlung löschen* (icon:delete[set=material, role=darkGrey]) nicht verfügbar. Möchtest du die Zahlung dennoch löschen, musst du dafür sorgen, dass sie weder zugeordnet ist, noch zugehörige Teilzahlungen existieren. Gehe dafür folgendermaßen vor:
 
 * Zahlung ist einem Auftrag zugeordnet: xref:payment:beta-zahlungen-verwalten.adoc#40[Löse] die Zahlung vom Auftrag. Prüfe vorher aber genau, ob das Lösen der Zahlung vom Auftrag ohne Bedenken durchgeführt werden kann. Die Zahlung kann nun gelöscht werden.
 * Zahlung wurde geteilt und Teilzahlungen existieren: Du musst zuerst die Teilzahlungen löschen. Dies geht nur, wenn sie keinem Auftrag zugeordnet sind. Sind sie zugeordnet, musst du die Zahlungen erst vom jeweiligen Auftrag xref:payment:beta-zahlungen-verwalten.adoc#40[lösen]. Prüfe vorher aber genau, ob das Lösen der Zahlung vom Auftrag ohne Bedenken durchgeführt werden kann. Lösche danach die Teilzahlungen. Die ursprüngliche Zahlung kann nun gelöscht werden.
@@ -581,10 +581,10 @@ Gehe wie im Folgenden beschrieben vor, um Zahlungen mit der Gruppenfunktion auto
 Zahlungen per Gruppenfunktion bearbeiten:
 
 . Öffne das Menü *Aufträge » Zahlungsverkehr*.
-. Wähle die Zahlungseingänge aus (icon:check_box[set=material]), die du zuordnen oder löschen möchtest.
-. Klicke über der Übersichtstabelle entweder auf *Zahlungen löschen* (icon:delete[set=material]) oder auf *Zahlungen automatisch zuordnen* (icon:credit_card[set=material]). +
+. Wähle die Zahlungseingänge aus (icon:check_box[set=material, role=skyBlue]), die du zuordnen oder löschen möchtest.
+. Klicke über der Übersichtstabelle entweder auf *Zahlungen löschen* (icon:delete[set=material, role=darkGrey]) oder auf *Zahlungen automatisch zuordnen* (icon:credit_card[set=material, role=darkGrey]). +
 → Du musst das Löschen oder die Zuordnung in einer Abfrage bestätigen oder ablehnen.
-. Nach der Ausführung wird dir angezeigt, wieviele der ausgewählten Zahlungen automatisch zugeordnet oder gelöscht wurden.
+. Nach der Ausführung wird dir angezeigt, wie viele der ausgewählten Zahlungen automatisch zugeordnet oder gelöscht wurden.
 
 Es kann vorkommen, dass nicht die gesamte Auswahl bearbeitet werden konnte. Zum Beispiel könnte eine oder mehrere der Zahlungen, die du löschen möchtest, einem Auftrag zugeordnet sein, dann sind Zahlungen nicht löschbar. Möchtest du aufgrund der Anzeige genauere Informationen haben, kannst du diese im Log einsehen. Gehe dafür ins Menü *Daten » Log*.
 
@@ -643,7 +643,7 @@ image::payment:portlet-infoboxen-bearbeiten.png[]
 Das Portlet *Zuordnung* bietet dir eine Auflistung der höchsten Übereinstimmungen mit Aufträgen für unzugeordnete Zahlungen. Ist eine Zahlung bereits zugeordnet, wird hier nur dieser entsprechende Eintrag angezeigt. Nur wenn die Zahlung vom Auftrag xref:payment:beta-zahlungen-verwalten.adoc#40[gelöst] wird, werden hier wieder die höchsten Übereinstimmungen angezeigt. +
 Die Übereinstimmungen zwischen Zahlungen und Aufträgen werden anhand einer Matrix im Hintergrund überprüft. Diese Überprüfung wird ausgelöst, sobald du diesen Bereich *Zuordnung* öffnest. Dann werden dir absteigend maximal die 10 Aufträge mit den höchsten Übereinstimmungsraten angezeigt.
 
-Zudem kannst du eine zugeordnete Zahlung in der Zuordnungstabelle lösen. Klicke dafür auf *Zahlung lösen* (icon:money_off[set=material]). Beachte allerdings, dass das xref:payment:beta-zahlungen-verwalten.adoc#40[Lösen von Zahlungen] nicht unbedacht geschehen sollte.
+Zudem kannst du eine zugeordnete Zahlung in der Zuordnungstabelle lösen. Klicke dafür auf *Zahlung lösen* (icon:money_off[set=material, role=darkGrey]). Beachte allerdings, dass das xref:payment:beta-zahlungen-verwalten.adoc#40[Lösen von Zahlungen] nicht unbedacht geschehen sollte.
 
 Die Zuordnungstabelle ist konfigurierbar. Standardmäßig werden dir alle zur Verfügung stehenden Spalten angezeigt:
 
@@ -653,7 +653,7 @@ Die Zuordnungstabelle ist konfigurierbar. Standardmäßig werden dir alle zur Ve
 * Kontakt-ID
 * Name des Kontaktes
 
-Mit der Funktion *Spalten konfigurieren* (icon:settings[set=material]) kannst du selbst bestimmen, welche Spalten dir in welcher Reihenfolge angezeigt werden. +
+Mit der Funktion *Spalten konfigurieren* (icon:settings[set=material, role=darkGrey]) kannst du selbst bestimmen, welche Spalten dir in welcher Reihenfolge angezeigt werden. +
 Optional kannst du über *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]) außerdem in den *Einstellungen* des Portlets *Zuordnung* festlegen, ob es beim Öffnen der Detailansicht einer Zahlung standardmäßig aus- oder eingeklappt sein soll. Nutze dafür die Option *Portlet eingeklappt*. +
 Möchtest du den Namen des Portlets ändern, dann gib im Feld *Titel* den gewünschten Namen ein.
 
@@ -663,7 +663,7 @@ image::payment:portlet-einstellungen.png[]
 [#payment-history]
 === Zahlungshistorie
 
-Das Portlet *Zahlungshistorie* bietet dir eine Übersicht über alle Aktionen, die in Zusammenhang mit dieser Zahlung ausgeführt wurden. Angezeigt wird auch, wer oder was (z.B. durch ein Plugin) die Aktion zu welchem Zeitpunkt ausgeführt hat, so dass eine Nachvollziehbarkeit immer gewährleistet ist.
+Das Portlet *Historie* bietet dir eine Übersicht über alle Aktionen, die in Zusammenhang mit dieser Zahlung ausgeführt wurden. Angezeigt wird auch, wer oder was (z.B. durch ein Plugin) die Aktion zu welchem Zeitpunkt ausgeführt hat, sodass eine Nachvollziehbarkeit immer gewährleistet ist.
 
 Du siehst auf einen Blick, wann (Datum) von wem (Benutzer:in oder sonstige Quelle, wie z.B. ein Plugin) was (Aktion und Wert, z.B. Zugeordnet | Order ID: xy) mit der Zahlung gemacht wurde. Du kannst der Zahlungshistorie z.B. folgende Einträge entnehmen:
 
@@ -678,7 +678,7 @@ Du siehst auf einen Blick, wann (Datum) von wem (Benutzer:in oder sonstige Quell
 
 
 Die Tabelle ist konfigurierbar. Standardmäßig werden dir mit *Datum*, *Benutzer / Quelle*, *Aktion* und *Wert* alle zur Verfügung stehenden Spalten angezeigt. +
-Beachte, dass die Einträge in der Spalte *Wert* immer auf Englisch sind, da diese Daten direkt aus der Datenbank entnommen werden. Über *Spalten konfigurieren* (icon:settings[set=material]) kannst du selbst bestimmen, welche Spalten dir in welcher Reihenfolge angezeigt werden.
+Beachte, dass die Einträge in der Spalte *Wert* immer auf Englisch sind, weil diese Daten direkt aus der Datenbank entnommen werden. Über *Spalten konfigurieren* (icon:settings[set=material, role=darkGrey]) kannst du selbst bestimmen, welche Spalten dir in welcher Reihenfolge angezeigt werden.
 
 Optional kannst du über *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]) außerdem in den *Einstellungen* des Portlets *Historie* festlegen, ob es beim Öffnen der Detailansicht einer Zahlung standardmäßig aus- oder eingeklappt sein soll. Nutze dafür die Option *Portlet eingeklappt*. +
 Möchtest du den Namen des Portlets ändern, dann gib im Feld *Titel* den gewünschten Namen ein.
@@ -703,5 +703,5 @@ Die unzugeordneten Zahlungen solltest du mindestens einmal wöchentlich bearbeit
 [TIP]
 .Tipp
 ====
-Zahlungen von SOFORT Überweisung werden unmittelbar nach dem Zahlungsvorgang per Schnittstelle bestätigt, tauchen dann aber erneut als Bankbuchungen im System auf. Diese Bankbuchungen kannst du aus der Liste der unzugeordneten Zahlungen löschen, da den Aufträgen die Zahlung ja bereits zugewiesen wurde.
+Zahlungen von SOFORT Überweisung werden unmittelbar nach dem Zahlungsvorgang per Schnittstelle bestätigt, tauchen dann aber erneut als Bankbuchungen im System auf. Diese Bankbuchungen kannst du aus der Liste der unzugeordneten Zahlungen löschen, weil den Aufträgen die Zahlung ja bereits zugewiesen wurde.
 ====
