--- a/docs/de-de/modules/payment/pages/payone.adoc
+++ b/docs/de-de/modules/payment/pages/payone.adoc
@@ -168,7 +168,7 @@ Container verknüpfen:
 → Die Detailansicht des Plugins öffnet sich.
 . Klicke auf *Container-Verknüpfungen*.
 . Wähle aus der Dropdown-Liste den Datenanbieter aus, den du verknüpfen möchtest.
-. Wähle den Container aus, mit dem du den Datenanbieter verknüpfen möchtest. Beachte dazu die Erläuterungen in <<tabelle-container-verknüpfen>>.
+. Wähle den Container aus, mit dem du den Datenanbieter verknüpfen möchtest. Beachte dazu die Erläuterungen in <<#tabelle-container-verknüpfen>>.
 . Wiederhole Schritte 5 und 6 für alle Datenanbieter, die du verknüpfen möchtest.
 . *Speichere* (icon:save[role=green]) die Einstellungen.
 
