--- a/docs/de-de/modules/payment/pages/sofort.adoc
+++ b/docs/de-de/modules/payment/pages/sofort.adoc
@@ -29,7 +29,7 @@ Sofort-Konto anbinden:
 . Öffnen Sie das Menü *Plugins » Plugins-Set-Übersicht » [Plugin-Set wählen]*
 . Öffne das Plugin *Sofort*
 . Öffne im Plugin das Menü *Konfiguration » Grundeinstellungen*. +
-→ Beachte die Erläuterungen in <<table-plugin-settings>>.
+→ Beachte die Erläuterungen in <<#table-plugin-settings>>.
 . Gib den Konfigurationsschlüssel ein. +
 → Diesen Schlüssel erhältst du durch den Registrierungsprozess.
 . Nimm weitere Einstellungen nach Bedarf im Bereich *Erweiterte Einstellungen* vor.
