--- a/docs/de-de/modules/payment/pages/zahlungsarten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/zahlungsarten-verwalten.adoc
@@ -22,7 +22,7 @@ Standard-Zahlungsart festlegen:
 [#30]
 == Zahlungsart in Kundenklasse erlauben
 
-In den Grundeinstellungen deiner Kundenklassen müssen Zahlungsarten erlaubt sein. Diese Einstellungen betreffen z.B. auch die *Standard-Endkunden*. Neue Zahlungsarten müssen den erlaubten Zahlungsarten hinzugefügt werden. Genauso kannst du hier Zahlungsarten für bestimmte Kundenklassen ausschließen, indem du die Zahlungsarten aus der Liste entfernst. Prüfe die Einstellungen unter *Erlaubte Zahlungsarten* deiner Kundenklassen, nachdem du eine neue Zahlungsart in deinem System eingerichtet hast. Weitere Details dazu findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen].
+In den Grundeinstellungen deiner Kundenklassen müssen Zahlungsarten erlaubt sein. Diese Einstellungen betreffen z.B. auch die *Standard-Endkunden*. Neue Zahlungsarten müssen den erlaubten Zahlungsarten hinzugefügt werden. Genauso kannst du hier Zahlungsarten für bestimmte Kundenklassen ausschließen, indem du die Zahlungsarten aus der Liste entfernst. Prüfe die Einstellungen unter *Erlaubte Zahlungsarten* deiner Kundenklassen, nachdem du eine neue Zahlungsart in deinem System eingerichtet hast. Weitere Details dazu findest du im Handbuchbereich xref:crm:kontakte.adoc#[Kontakte] im Kapitel xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse erstellen].
 
 [TIP]
 .SSL-Zertifikat und Verschlüsselung
@@ -33,12 +33,12 @@ Wir empfehlen dir grundsätzlich, wenn du mit Zahlungs- und Kundendaten arbeiten
 [#50]
 == Rabatt auf Zahlungsart gewähren
 
-Du kannst für deine Kund:innen Rabatt auf Zahlungsarten gewähren. Dies ist eine Einstellung in den Kundenklassen, die es ermöglicht im Webshop einen Rabatt auf bestimmte Zahlungsarten anzubieten. Wie du einen Rabatt auf eine Zahlungsart in einer Kundenklasse festlegst, erfährst du im Kapitel xref:crm:vorbereitende-einstellungen.adoc#rabatt-zahlungsart[Rabatt auf Zahlungsart einrichten].
+Du kannst für deine Kund:innen Rabatt auf Zahlungsarten gewähren. Dies ist eine Einstellung in den Kundenklassen, die es ermöglicht im Webshop einen Rabatt auf bestimmte Zahlungsarten anzubieten. Wie du einen Rabatt auf eine Zahlungsart in einer Kundenklasse festlegst, erfährst du im Handbuchbereich xref:crm:kontakte.adoc#[Kontakte] im Kapitel xref:crm:vorbereitende-einstellungen.adoc#rabatt-zahlungsart[Rabatt auf Zahlungsart einrichten].
 
 [#60]
 ==  Versand ohne Zahlungseingang
 
-Bei einigen Zahlungsarten, z.B. der Zahlung auf Rechnung, erfolgt der Versand bereits vor dem Zahlungseingang. Bei Beschränkung des xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Warenbestands] auf Netto-Warenbestand prüft das System, ob Bestand vorhanden ist, und versetzt den Auftrag je nach Bestandsverfügbarkeit in den Status 4 oder 5. Möchtest du diese Einstellung anwenden, setze im Menü xref:auftraege:grundeinstellungen.adoc#[Einrichtung » Aufträge » Einstellungen] die Einstellung *Statuswechsel auf 4 statt 5, wenn Warenbestand fehlt* auf *JA*. Ist für diese Einstellung *NEIN* ausgewählt, ist keine Beschränkung des Warenbestands eingestellt. Der Auftrag wird dann direkt zum Versand freigegeben, d.h. er wird in Status 5 versetzt.
+Bei einigen Zahlungsarten, z.B. der Zahlung auf Rechnung, erfolgt der Versand bereits vor dem Zahlungseingang. Bei Beschränkung des xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Warenbestands] auf Netto-Warenbestand prüft das System, ob Bestand vorhanden ist, und versetzt den Auftrag je nach Bestandsverfügbarkeit in den Status 4 oder 5. Möchtest du diese Einstellung anwenden, setze in den xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] des Auftrags im Menü *Einrichtung » Aufträge » Einstellungen* die Einstellung *Statuswechsel auf 4 statt 5, wenn Warenbestand fehlt* auf *JA*. Ist für diese Einstellung *NEIN* ausgewählt, ist keine Beschränkung des Warenbestands eingestellt. Der Auftrag wird dann direkt zum Versand freigegeben, d.h. er wird in Status 5 versetzt.
 
 Bei folgenden Zahlungsarten erfolgt der Versand vor dem Zahlungseingang:
 
@@ -47,12 +47,12 @@ Bei folgenden Zahlungsarten erfolgt der Versand vor dem Zahlungseingang:
 *  Nachnahme
 *  Amazon
 
-Beachte dazu auch die Handbuchseite xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Warenbestände].
+Beachte dazu auch die Handbuchseite xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Bestand überwachen].
 
 [#65]
 == Übersicht der Zahlungsarten im System
 
-Im Menü *Einrichtung » Aufträge » Zahlung » Zahlungsarten* findest du eine Übersicht über die Zahlungsarten und deren IDs in deinem plentymarkets System. Standardmäßig werden dir hier die Plugin-Zahlungsarten angezeigt. Möchtest du alle im System vorhandenen Zahlungsarten einsehen, nutze den Toggle (icon:toggle-on[role="green"]) über der Tabelle.
+Im Menü *Einrichtung » Aufträge » Zahlung » Zahlungsarten* findest du eine Übersicht über die Zahlungsarten und deren IDs in deinem plentymarkets System. Standardmäßig werden dir hier die Plugin-Zahlungsarten angezeigt. Möchtest du alle im System vorhandenen Zahlungsarten einsehen, nutze den Toggle (icon:toggle_on[set=material, role=skyBlue]) oberhalb der Tabelle.
 
 In der Übersicht lassen sich keine Zahlungsarten aktivieren. Möchtest du Zahlungsarten in dein plentymarkets System einbinden und deinen Kund:innen zur Verfügung stellen, musst du das entsprechende Plugin im link:https://marketplace.plentymarkets.com/plugins/payment[plentyMarketplace^] herunterladen. Anleitungen zur Einrichtung findest du ebenfalls im Marketplace oder im Bereich xref:payment:payment-plugins.adoc#[Payment Plugins] im Handbuch.
 
@@ -72,14 +72,14 @@ Dies ist eine Standardspalte.
 
 |*Suchbar im Backend*
 |Ist eine Zahlungsart suchbar im Backend, wird sie an allen Stellen im System, an denen du eine Zahlungsart auswählen kannst, angezeigt. Zum Beispiel in Dropdown-Listen in Ereignisaktionen etc. +
-icon:check-square[role="green"] = Die Zahlungsart ist suchbar im Backend. +
-icon:minus-circle[role="red"] = Die Zahlungsart ist nicht suchbar im Backend. +
+icon:check_circle[set=material, role=green] = Die Zahlungsart ist suchbar im Backend. +
+icon:cancel[set=material, role=red] = Die Zahlungsart ist nicht suchbar im Backend. +
 Dies ist eine Standardspalte.
 
 |*Aktiv im Backend*
 |Ist eine Zahlungsart im Backend aktiv, kann sie einem Auftrag bei manueller Auftragserstellung zugewiesen werden. Zudem ist sie auch suchbar im Backend, d.h. sie wird an allen Stellen im System, an denen du eine Zahlungsart auswählen kannst, angezeigt. Zum Beispiel in Dropdown-Listen in Ereignisaktionen etc. +
-icon:check-square[role="green"] = Die Zahlungsart ist im Backend aktiv. +
-icon:minus-circle[role="red"] = Die Zahlungsart ist nicht im Backend aktiv. +
+icon:check_circle[set=material, role=green] = Die Zahlungsart ist im Backend aktiv. +
+icon:cancel[set=material, role=red] = Die Zahlungsart ist nicht im Backend aktiv. +
 Dies ist eine Standardspalte.
 
 |*Zahlungsart Abonnement*
