--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -281,70 +281,6 @@ Barcode für Kaufland.de festlegen:
 . Speichere (icon:save[set=plenty]) die Einstellungen. +
 *_Tipp:_* Ist dieser Barcode schon mit deinen Varianten verknüpft? Wenn nicht, dann vergiss nicht, <<#save-barcode, den Barcode mit deinen Varianten zu verknüpfen und einen Code zu speichern>>.
 
-[#600]
-=== Kategorien verknüpfen
-
-Verknüpfe deine plentymarkets Kategorien mit den Kategorien von Kaufland.de, damit deine Artikel in diesen Kategorien angezeigt werden. Weitere Artikel der verknüpften Kategorien werden automatisch zugewiesen.
-
-[.instruction]
-Kategorien verknüpfen:
-
-. Öffne das Menü *Einrichtung » Märkte » Kaufland.de » Kategorieverknüpfung*.
-. Klicke auf *Suchen* (icon:search[role="blue"]). +
-→ Das Fenster *Kategorie wählen* wird geöffnet.
-. Wähle die Kaufland.de-Kategorie, die am besten zu deiner plentymarkets Kategorien passt.
-. Klicke auf *Übernehmen*. +
-→ Die ID der Kaufland.de-Kategorie und der Kategoriepfad werden angezeigt.
-. Wenn du die ID der Kaufland.de-Kategorie bereits kennst, gib die ID in das Feld *Marktplatzkategorie* ein, um sie mit deiner plentymarkets Kategorie zu verknüpfen.
-. Speichere (icon:save[set=plenty]) die Einstellungen.
-
-[IMPORTANT]
-.Unterkategorien müssen nicht verknüpft werden
-====
-Es kann vorkommen, dass deine Unterkategorien nicht mit denen von Kaufland.de übereinstimmen. Verknüpfe deine Artikel in diesem Fall mit der passenden Hauptkategorie von Kaufland.de. Kaufland.de ordnet deine Artikel automatisch einer Unterkategorie zu. Artikel, die keiner Kaufland.de-Kategorie zugeordnet wurden, solltest du nicht an Kaufland.de übertragen.
-====
-
-[#prepare-characteristics]
-=== Merkmale vorbereiten
-
-Breite nun deine Merkmale für den Marktplatz vor.
-
-[#500]
-==== Merkmale für Marktplatz aktivieren
-
-:market: Kaufland.de
-:characteristic-option: Kaufland.de
-
-include::partial$activate-characteristic.adoc[]
-
-[#550]
-==== plentymarkets-Merkmale mit Kaufland.de-Attributen verknüpfen
-
-Bei Kaufland.de hast du die Möglichkeit, Attribute durch plentymarkets-Merkmale zu überschreiben oder Kaufland.de-Attribute hinzuzufügen. +
-*_Wichtig:_* Damit die plentymarkets-Merkmale im Kaufland.de-Export korrekt zugewiesen werden können, muss der interne Name des plentymarkets-Merkmals derselbe Name sein wie die Spaltenüberschrift in der Product.csv-Datei von Kaufland.de. +
-Die Kaufland.de-Attribute ean (EAN), title (Titel), description (Beschreibung), manufacturer (Hersteller) und picture (Bild) sind für den Artikelexport Pflichtangaben und werden standardmäßig von plentymarkets übertragen. Diese können nur durch ein Merkmal überschrieben werden. Andere Attribute wie zum Beispiel "material_composition", "clothing_size" oder "weight" können hinzugefügt werden, wenn ein entsprechendes Merkmal mit Namen in plentymarkets erstellt wird.
-
-[WARNING]
-.Pflichtangaben für den Artikelexport
-====
-Die Kaufland.de-Attribute *ean* (EAN), *title* (Titel), *description* (Beschreibung), *manufacturer* (Hersteller) und *picture* (Bild) sind für den Artikelexport Pflichtangaben.
-====
-
-[.instruction]
-Merkmal erstellen:
-
-. Öffne das Menü *Einrichtung » Artikel » Merkmale*.
-. Wechsele in das Tab *Neues Merkmal*.
-. Gib unter *Name (intern)* den Namen des Kaufland.de-Attributes ein. +
-→ Die eingegebene Bezeichnung wird in der Artikelbearbeitung in der Merkmalverknüpfung angezeigt.
-. Gib einen Namen unter *Webshop* ein.  +
-→ Dieser Name wird in der Artikelübersicht im plentyShop angezeigt.
-. Wähle den *Merkmaltyp*.
-. Aktiviere die Option *Kaufland.de*.
-. Speichere (icon:save[set=plenty]) die Einstellungen.
-
-Weitere Informationen zur Merkmalverknüpfung bei Kaufland.de findest du auf der Best Practice-Seite xref:maerkte:best-practices-kaufland-merkmalverknuepfung.adoc#[Merkmale mit Attributen verknüpfen].
-
 [#prepare-variations]
 == Varianten vorbereiten
 
@@ -401,6 +337,10 @@ Barcode speichern:
 . Gib den Code in das Feld *Code* ein.
 . *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
 
+
+
+
+
 [#artikelexport]
 == Artikeldaten exportieren
 
@@ -414,24 +354,114 @@ Barcode speichern:
 
 In diesem Kapitel wird beschrieben, wie du deine Artikeldaten über den alten Export zu {market} exportierst.
 
+[#600]
+=== Kategorien verknüpfen
+
+Verknüpfe deine plentymarkets Kategorien mit den Kategorien von Kaufland.de, damit deine Artikel in diesen Kategorien angezeigt werden. Weitere Artikel der verknüpften Kategorien werden automatisch zugewiesen.
+
+[.instruction]
+Kategorien verknüpfen:
+
+. Öffne das Menü *Einrichtung » Märkte » Kaufland.de » Kategorieverknüpfung*.
+. Klicke auf *Suchen* (icon:search[role="blue"]). +
+→ Das Fenster *Kategorie wählen* wird geöffnet.
+. Wähle die Kaufland.de-Kategorie, die am besten zu deiner plentymarkets Kategorie passt.
+. Klicke auf *Übernehmen*. +
+→ Die ID der Kaufland.de-Kategorie und der Kategoriepfad werden angezeigt.
+. Wenn du die ID der Kaufland.de-Kategorie bereits kennst, gib die ID in das Feld *Marktplatzkategorie* ein, um sie mit deiner plentymarkets Kategorie zu verknüpfen.
+. Speichere (icon:save[set=plenty]) die Einstellungen.
+
+[IMPORTANT]
+.Unterkategorien müssen nicht verknüpft werden
+====
+Es kann vorkommen, dass deine Unterkategorien nicht mit denen von Kaufland.de übereinstimmen. Verknüpfe deine Artikel in diesem Fall mit der passenden Hauptkategorie von Kaufland.de. Kaufland.de ordnet deine Artikel automatisch einer Unterkategorie zu. Artikel, die keiner Kaufland.de-Kategorie zugeordnet wurden, solltest du nicht an Kaufland.de übertragen.
+====
+
+[#prepare-characteristics]
+=== Merkmale vorbereiten
+
+Breite nun deine Merkmale für den Marktplatz vor.
+
+[#500]
+==== Merkmale für Marktplatz aktivieren
+
+:market: Kaufland.de
+:characteristic-option: Kaufland.de
+
+include::partial$activate-characteristic.adoc[]
+
+[#550]
+==== plentymarkets-Merkmale mit Kaufland.de-Attributen verknüpfen
+
+Bei Kaufland.de hast du die Möglichkeit, Attribute durch plentymarkets-Merkmale zu überschreiben oder Kaufland.de-Attribute hinzuzufügen. +
+*_Wichtig:_* Damit die plentymarkets-Merkmale im Kaufland.de-Export korrekt zugewiesen werden können, muss der interne Name des plentymarkets-Merkmals derselbe Name sein wie die Spaltenüberschrift in der Product.csv-Datei von Kaufland.de. +
+Die Kaufland.de-Attribute ean (EAN), title (Titel), description (Beschreibung), manufacturer (Hersteller) und picture (Bild) sind für den Artikelexport Pflichtangaben und werden standardmäßig von plentymarkets übertragen. Diese können nur durch ein Merkmal überschrieben werden. Andere Attribute wie zum Beispiel "material_composition", "clothing_size" oder "weight" können hinzugefügt werden, wenn ein entsprechendes Merkmal mit Namen in plentymarkets erstellt wird.
+
+[WARNING]
+.Pflichtangaben für den Artikelexport
+====
+Die Kaufland.de-Attribute *ean* (EAN), *title* (Titel), *description* (Beschreibung), *manufacturer* (Hersteller) und *picture* (Bild) sind für den Artikelexport Pflichtangaben.
+====
+
+[.instruction]
+Merkmal erstellen:
+
+. Öffne das Menü *Einrichtung » Artikel » Merkmale*.
+. Wechsele in das Tab *Neues Merkmal*.
+. Gib unter *Name (intern)* den Namen des Kaufland.de-Attributes ein. +
+→ Die eingegebene Bezeichnung wird in der Artikelbearbeitung in der Merkmalverknüpfung angezeigt.
+. Gib einen Namen unter *Webshop* ein.  +
+→ Dieser Name wird in der Artikelübersicht im plentyShop angezeigt.
+. Wähle den *Merkmaltyp*.
+. Aktiviere die Option *Kaufland.de*.
+. Speichere (icon:save[set=plenty]) die Einstellungen.
+
+Weitere Informationen zur Merkmalverknüpfung bei Kaufland.de findest du auf der Best Practice-Seite xref:maerkte:best-practices-kaufland-merkmalverknuepfung.adoc#[Merkmale mit Attributen verknüpfen].
+
 [#catalogue-export]
 === _Möglichkeit 2:_ Katalogexport _(empfohlen)_
 
-Mit dem Export über Kataloge machst du deinen Artikelexport zukunftssicher und flexibel. Mit dem Katalogexport werden Artikeldaten über ein Katalog-Format zu Kaufland exportiert. Kataloge erstellst du im Menü *Daten » Kataloge*.
+Mit dem Export über Kataloge machst du deinen Artikelexport zukunftssicher und flexibel. Mit dem Katalogexport werden Artikeldaten über einen Katalog zu Kaufland exportiert. Kataloge für Kaufland erstellst du im Menü *Einrichtung » Assistenten » Omni-Channel* mit dem Assistenten *Kaufland - Kataloge erstellen*. 
 
 include::partial$catalogue-new-to-text.adoc[]
 
 [#create-catalogue]
 ==== Katalog erstellen
 
-Artikeldaten werden über ein Marktplatz-Format zu Kaufland exportiert. Um deine Artikel zu {market} zu exportieren, erstellst du im Menü *Daten » Kataloge* ein Katalog-Format. Verknüpfe dann im eben erstellten Format die von Kaufland vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. Wenn du den Katalog aktiviert hast, werden die Katalogdaten einmal täglich automatisch zu {market} exportiert.
+Artikeldaten werden über einen Katalog zu Kaufland exportiert. Kataloge für Kaufland erstellst du mit dem Assistenten *Kaufland - Kataloge erstellen* im Menü *Einrichtung » Assistenten » Omni-Channel*. Verknüpfe anschließend im eben erstellten Katalog die von Kaufland vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. Wenn du den Katalog aktiviert hast, werden die Artikeldaten einmal täglich automatisch zu {market} exportiert.
 
-Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Lebensmittel* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Auto & Motorrad*. Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, ein eigenes Katalog-Format erstellen.
+Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Lebensmittel* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Auto & Motorrad*. Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, einen eigenen Katalog erstellen.
 
-// Template-Name prüfen
-:catalogue-template-name: Kaufland
+:number-of-boxes: Info-Box
 
-include::partial$catalogue-creation.adoc[]
+[.instruction]
+Katalog mit dem Assistenten erstellen:
+
+. Öffne das Menü *Einrichtung » Assistenten » Omni-Channel*.
+. Klicke auf den Assistenten *Kaufland - Kataloge erstellen*.
+. Folge den Anweisungen auf dem Bildschirm. Wenn du zusätzliche Informationen zu einer der Optionen benötigst, klappe die {number-of-boxes} unter dieser Beschreibung auf (icon:chevron-down[role="darkGrey"]).
+. Prüfe im Schritt *Zusammenfassung* deine Einstellungen noch einmal auf mögliche Fehler. +
+*_Tipp:_* Klicke im Schritt *Zusammenfassung* auf den Pfeil nach unten (icon:chevron-down[role="darkGrey"]), um die Einstellungen auszuklappen.
+. Wenn alles passt, klicke auf icon:check[role="green"] *Abschließen*. +
+→ Die Einstellungen werden gespeichert. +
+
+[.collapseBox]
+.Schritt *Katalog für Kaufland erstellen*
+--
+* *Für welches Kaufland-Konto soll dieser Katalog genutzt werden?*
+Wähle das Kaufland-Konto, für das ein Katalog erstellt werden soll. 
+
+* *Wie soll der Katalog für diese Kaufland-Kategorie heißen? Der Name wird im Menü Daten » Kataloge angezeigt und nicht zu Kaufland exportiert.*
+Hier gibst du einen internen Namen für den Kaufland-Katalog ein. Dieser Name ist nur in deinem plentymarkets System im Menü *Daten » Kataloge* sichtbar und dient einer besseren Übersicht über deine Kataloge. Der Name des Katalogs wird nicht zu Kaufland exportiert.
+
+* *Wähle eine Kaufland-Länderplattform.*
+Hier wählst du die Kaufland-Länderplattform, für die ein Katalog erstellt werden soll. Die Artikeldaten in diesem Katalog werden nur an diese Länderplattform exportiert. Du kannst also für verschiedene Länder verschiedene Kataloge mit unterschiedlichen Artikeldaten erstellen. +
+Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beispiel *DE* für *Deutschland*. +
+*_Hinweis:_* Momentan ist nur die Länderplattform *Deutschland (DE)* verfügbar.
+
+* *Wähle eine Kaufland-Produktkategorie.*
+Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Lebensmittel* und *Auto & Motorrad*. 
+--
 
 [#data-field-mappings]
 ==== Datenfelder im Katalog zuordnen
@@ -472,6 +502,11 @@ Wenn du für eine Kaufland-Produktkategorie noch keinen Katalog erstellt hast, w
 :interval: einmal täglich
 
 include::partial$catalogue-activation.adoc[]
+
+
+
+
+
 
 [#850]
 == Vorlage für Rechnungen anpassen
